# caffe-oneclick

./: .gitignore  CMakeLists.txt  README.md  classification.bat  evaluation.bat  evaluation.sh  oneclick.bat  oneclick.sh  plate996.caffemodel  train.bat  train.py  train.sh  util.sln  热门深度学习工具排行：Pylearn2 居首，Caffe第三.docx
blogs/: Deep Learning 从头开始.docx  Deep Learning（深度学习）学习笔记整理系列.docx  腾讯深度学习系列.docx
caffe/: 20150531-贾扬清微信讲座完整版.docx  Caffe for windows使用matlab运行RCNN demo.docx  Caffe useful samples.txt  Caffe-代码解析.docx  Caffe学习笔记.docx  Caffe数据转换.docx  Fast RCNN ubuntu下安装笔记.docx  Google gflags使用说明.docx  RCNN的安装与简单使用.docx  Windows7配置caffe.docx  caffe study.docx  caffe代码导读.docx  caffe源码分析.docx  caffe源码简单解析.docx  caffe源码解析.docx  caffe的组织结构.docx  catdemo.m  mrclassifyimage.py  使用Caffe对图片进行训练并分类的简单流程.docx  利用训练好的Caffe网络得到输入图像的分类.docx  在caffe上跑自己的数据.docx  基于caffe的车辆定位.docx  如何在Caffe中配置每一个层的结构.docx  模型解读.docx  虚拟机搭建caffe.docx  贾扬清：希望Caffe成为深度学习领域的Hadoop.txt
cpp/: LenetClassifier.cpp  LenetClassifier.h  evaluation.cpp  evaluationcpp.vcxproj
cpp4caffe/: cnnpredictor.h  cpp4caffe.vcxproj  evaluation.cpp
cxxnet/: DMLC深盟分布式深度机器学习开源平台解析.docx  cxxnet学习笔记.docx  用vs2013编译cxxnet.docx
matconvnet/: windows上编译MatConvNet.docx
modeldef/: deploy.prototxt  labels.txt  plate_fromimg.prototxt  plate_train_test.prototxt  solver.prototxt  关于caffe里面image_data_layer的使用.docx
models/: deploy.prototxt  mean.binaryproto  mean.npy  plate_fromimg.prototxt  plate_lenet.prototxt  solver.prototxt
python/: DeepLearning tutorial.docx  NumPy.docx  Python 数据分析包：pandas 基础.docx  Theano学习笔记.docx  (+16 more)
(+44 files in other folders)
